# kde-uninstall

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/kde_uninstall/: app.h  command.h  constants.h  desktop_file.h  integration.h  package_manager.h  paths.h  string_utils.h  types.h  ui.h
src/: app.cpp  command.cpp  desktop_file.cpp  integration.cpp  package_manager.cpp  paths.cpp  string_utils.cpp  ui.cpp
